Add GitHub Actions workflow to build Windows and macOS executables

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,8 +58,8 @@ jobs:
           name: PhotoUploader-Linux
           path: dist/PhotoUploader
 
-    build-macos:
-    runs-on: macos-13  # Intel-based macOS runner
+  build-macos:
+    runs-on: macos-13  # Intel-compatible runner
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -77,15 +77,4 @@ jobs:
       - name: Build macOS Intel app
         run: |
           pyinstaller --windowed --name PhotoUploader src/main.py
-          file dist/PhotoUploader.app/Contents/MacOS/PhotoUploader
-
-      - name: Zip the app
-        run: |
-          cd dist
-          zip -r PhotoUploader-macOS-Intel.zip PhotoUploader.app
-
-      - name: Upload macOS artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: PhotoUploader-macOS-Intel
-          path: dist/PhotoUploader-macOS-Intel.zip
+          file dist/PhotoUploader.
