--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -126,35 +126,41 @@ jobs:
           name: PhotoUploader-x86_64
           path: x86_64-build
       
-      - name: Log downloaded files for debugging
-        run: |
-          echo "--- ARM Build Contents ---"
-          ls -R arm64-build
-          echo "--- Intel Build Contents ---"
-          ls -R x86_64-build
-
       - name: Merge Intel + ARM into universal app
         run: |
-          echo "Creating universal app structure..."
-          # Copy the entire ARM .app bundle to use as a base
-          cp -R arm64-build/PhotoUploader.app dist/PhotoUploader.app
+          # Exit immediately if a command exits with a non-zero status.
+          set -e
 
-          echo "Creating universal binary with lipo..."
-          # Create the universal binary and place it inside the new .app bundle
+          echo "--- Verifying downloaded ARM artifact ---"
+          ls -R arm64-build
+          lipo -info "arm64-build/PhotoUploader.app/Contents/MacOS/PhotoUploader"
+          
+          echo "--- Verifying downloaded Intel artifact ---"
+          ls -R x86_64-build
+          lipo -info "x86_64-build/PhotoUploader.app/Contents/MacOS/PhotoUploader"
+
+          echo "--- Creating universal app structure ---"
+          cp -R "arm64-build/PhotoUploader.app" "dist/PhotoUploader.app"
+
+          echo "--- Creating universal binary with lipo ---"
           lipo -create \
             "arm64-build/PhotoUploader.app/Contents/MacOS/PhotoUploader" \
             "x86_64-build/PhotoUploader.app/Contents/MacOS/PhotoUploader" \
             -output "dist/PhotoUploader.app/Contents/MacOS/PhotoUploader"
 
-          echo "Verifying the final universal binary..."
-          # This check confirms the final binary has both architectures
+          echo "--- Verifying the final universal binary ---"
+          echo "Lipo Info:"
           lipo -info "dist/PhotoUploader.app/Contents/MacOS/PhotoUploader"
+          
+          # Explicitly check for both architectures. Grep will exit with an error if not found.
           lipo -info "dist/PhotoUploader.app/Contents/MacOS/PhotoUploader" | grep "x86_64"
           lipo -info "dist/PhotoUploader.app/Contents/MacOS/PhotoUploader" | grep "arm64"
+          echo "Universal binary successfully verified."
           
-          echo "Zipping the universal app..."
-          cd dist
-          zip -ry PhotoUploader-macOS-Universal.zip PhotoUploader.app
+          echo "--- Zipping the universal app ---"
+          # Zip from the workspace root to avoid 'cd'
+          zip -ry "dist/PhotoUploader-macOS-Universal.zip" "dist/PhotoUploader.app"
+          echo "Zipping complete."
 
       - name: Upload Universal macOS app
         uses: actions/upload-artifact@v4
