--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,13 +72,16 @@ jobs:
         run: |
           pyinstaller --windowed --noconfirm --name PhotoUploader src/main.py
           echo "Verifying architecture..."
-          # This check will fail the job if the binary is not for x86_64
           lipo -info dist/PhotoUploader.app/Contents/MacOS/PhotoUploader | grep "x86_64"
+      - name: Zip the .app bundle
+        run: |
+          cd dist
+          zip -ry PhotoUploader-x86_64.zip PhotoUploader.app
       - name: Upload macOS x86_64 artifact
         uses: actions/upload-artifact@v4
         with:
-          name: PhotoUploader-x86_64
-          path: dist/PhotoUploader.app
+          name: PhotoUploader-x86_64-artifact
+          path: dist/PhotoUploader-x86_64.zip
 
   # ---------------- macOS BUILD (Apple Silicon arm64) ----------------
   build-macos-arm64:
@@ -100,42 +103,40 @@ jobs:
         run: |
           pyinstaller --windowed --noconfirm --name PhotoUploader src/main.py
           echo "Verifying architecture..."
-          # This check will fail the job if the binary is not for arm64
           lipo -info dist/PhotoUploader.app/Contents/MacOS/PhotoUploader | grep "arm64"
+      - name: Zip the .app bundle
+        run: |
+          cd dist
+          zip -ry PhotoUploader-arm64.zip PhotoUploader.app
       - name: Upload macOS arm64 artifact
         uses: actions/upload-artifact@v4
         with:
-          name: PhotoUploader-arm64
-          path: dist/PhotoUploader.app
+          name: PhotoUploader-arm64-artifact
+          path: dist/PhotoUploader-arm64.zip
 
   # ---------------- MERGE MACOS BUILDS INTO UNIVERSAL APP ----------------
   merge-macos-universal:
-    # This job runs after both macOS builds are successful
     needs: [build-macos-x86_64, build-macos-arm64]
-    runs-on: macos-latest # The merge can happen on any macOS runner
+    runs-on: macos-latest
     steps:
-      - name: Download ARM build
+      - name: Download all macOS artifacts
         uses: actions/download-artifact@v4
-        with:
-          name: PhotoUploader-arm64
-          path: arm64-build
+        # By not specifying a path, it downloads all artifacts into directories
+        # named after the artifact in the workspace root.
 
-      - name: Download Intel build
-        uses: actions/download-artifact@v4
-        with:
-          name: PhotoUploader-x86_64
-          path: x86_64-build
-      
-      - name: Merge Intel + ARM into universal app
+      - name: Unzip, merge, and verify universal app
         run: |
-          # Exit immediately if a command exits with a non-zero status.
-          set -e
+          set -e # Exit immediately if a command fails
 
-          echo "--- Verifying downloaded ARM artifact ---"
+          echo "--- Unzipping artifacts ---"
+          unzip "PhotoUploader-arm64-artifact/PhotoUploader-arm64.zip" -d "arm64-build"
+          unzip "PhotoUploader-x86_64-artifact/PhotoUploader-x86_64.zip" -d "x86_64-build"
+          
+          echo "--- Verifying unzipped ARM artifact ---"
           ls -R arm64-build
           lipo -info "arm64-build/PhotoUploader.app/Contents/MacOS/PhotoUploader"
           
-          echo "--- Verifying downloaded Intel artifact ---"
+          echo "--- Verifying unzipped Intel artifact ---"
           ls -R x86_64-build
           lipo -info "x86_64-build/PhotoUploader.app/Contents/MacOS/PhotoUploader"
 
@@ -149,16 +150,12 @@ jobs:
             -output "dist/PhotoUploader.app/Contents/MacOS/PhotoUploader"
 
           echo "--- Verifying the final universal binary ---"
-          echo "Lipo Info:"
           lipo -info "dist/PhotoUploader.app/Contents/MacOS/PhotoUploader"
-          
-          # Explicitly check for both architectures. Grep will exit with an error if not found.
           lipo -info "dist/PhotoUploader.app/Contents/MacOS/PhotoUploader" | grep "x86_64"
           lipo -info "dist/PhotoUploader.app/Contents/MacOS/PhotoUploader" | grep "arm64"
           echo "Universal binary successfully verified."
           
           echo "--- Zipping the universal app ---"
-          # Zip from the workspace root to avoid 'cd'
           zip -ry "dist/PhotoUploader-macOS-Universal.zip" "dist/PhotoUploader.app"
           echo "Zipping complete."
 
